Fix notice visibility

--- a/app/assets/stylesheets/components/_notices.scss
+++ b/app/assets/stylesheets/components/_notices.scss
@@ -9,7 +9,8 @@
   background-color: $rg-red;
 
   @include media($desktop) {
-    float: left;
+    position: absolute;
     width: 400px;
+    z-index: 1;
   }
 }
